--- a/spark-scala/pom.xml
+++ b/spark-scala/pom.xml
@@ -68,7 +68,17 @@
 			<version>${spark.version}</version>
 		</dependency>
 
-
+		<dependency>
+			<groupId>com.databricks</groupId>
+			<artifactId>spark-csv_2.10</artifactId>
+			<version>1.3.0</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>com.databricks</groupId>
+			<artifactId>spark-avro_2.10</artifactId>
+			<version>2.0.1</version>
+		</dependency>
 		<!-- spark-cassandra-connector -->
 		<dependency>
 			<groupId>com.datastax.spark</groupId>
@@ -76,25 +86,7 @@
 			<version>${spark-cassandra.version}</version>
 		</dependency>
 
-		<!-- Test -->
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>${junit.version}</version>
-			<scope>test</scope>
-		</dependency>
 
-		<dependency>
-			<groupId>org.postgresql</groupId>
-			<artifactId>postgresql</artifactId>
-			<version>${postgresql.version}</version>
-		</dependency>
-
-		<dependency>
-			<groupId>org.apache.commons</groupId>
-			<artifactId>commons-dbcp2</artifactId>
-			<version>${apache.common.version}</version>
-		</dependency>
 		<!-- Test -->
 		<dependency>
 			<groupId>junit</groupId>
