--- a/spark-scala/pom.xml
+++ b/spark-scala/pom.xml
@@ -73,7 +73,7 @@
 			<artifactId>spark-csv_2.10</artifactId>
 			<version>1.3.0</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>com.databricks</groupId>
 			<artifactId>spark-avro_2.10</artifactId>
@@ -85,7 +85,18 @@
 			<artifactId>spark-cassandra-connector_2.10</artifactId>
 			<version>${spark-cassandra.version}</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.apache.spark</groupId>
+			<artifactId>spark-streaming-twitter_2.10</artifactId>
+			<version>1.6.2</version>
+		</dependency>
 
+		<dependency>
+			<groupId>com.databricks</groupId>
+			<artifactId>spark-xml_2.10</artifactId>
+			<version>0.4.0</version>
+		</dependency>
 
 		<!-- Test -->
 		<dependency>
@@ -130,8 +141,8 @@
 			<artifactId>json4s-jackson_2.11</artifactId>
 			<version>3.2.11</version>
 		</dependency>
-	
-		
+
+
 		<!-- mongodb -->
 		<dependency>
 			<groupId>org.mongodb.mongo-hadoop</groupId>
