--- a/Spark-2.1/pom.xml
+++ b/Spark-2.1/pom.xml
@@ -37,6 +37,17 @@
 			<version>${spark.version}</version>
 			<scope>provided</scope>
 		</dependency>
+		<!-- DataDog dependencies -->
+		<dependency>
+			<groupId>org.coursera</groupId>
+			<artifactId>metrics-datadog</artifactId>
+			<version>1.1.6</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>4.5.2</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<resources>
