--- a/Spark-2.1/pom.xml
+++ b/Spark-2.1/pom.xml
@@ -112,6 +112,12 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<version>6.0.4</version>
 		</dependency>
+		<!-- yaml parser -->
+		<dependency>
+			<groupId>org.yaml</groupId>
+			<artifactId>snakeyaml</artifactId>
+			<version>1.18</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<resources>
