--- a/Spark-2.1/pom.xml
+++ b/Spark-2.1/pom.xml
@@ -118,6 +118,12 @@
 			<artifactId>snakeyaml</artifactId>
 			<version>1.18</version>
 		</dependency>
+		<!--  Spark Elastic Search -->
+		<dependency>
+			<groupId>org.elasticsearch</groupId>
+			<artifactId>elasticsearch-spark-20_2.11</artifactId>
+			<version>5.6.2</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<resources>
