--- a/Spark-2.1/pom.xml
+++ b/Spark-2.1/pom.xml
@@ -124,6 +124,12 @@
 			<artifactId>elasticsearch-spark-20_2.11</artifactId>
 			<version>5.6.2</version>
 		</dependency>
+		<!-- xml parser -->
+	    <dependency>
+			<groupId>com.databricks</groupId>
+			<artifactId>spark-xml_2.11</artifactId>
+			<version>0.4.1</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<resources>
