--- a/Spark-2.1/pom.xml
+++ b/Spark-2.1/pom.xml
@@ -32,6 +32,7 @@
 		<hadoop.version>2.6.0</hadoop.version>
 		<java.version>1.8</java.version>
 		<CodeCacheSize>512m</CodeCacheSize>
+		<es.version>2.4.6</es.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -124,6 +125,15 @@
 			<artifactId>elasticsearch-spark-20_2.11</artifactId>
 			<version>5.6.2</version>
 		</dependency>
+		<dependency>
+			<groupId>org.elasticsearch</groupId>
+			<artifactId>elasticsearch</artifactId>
+			<version>${es.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.elasticsearch.plugin</groupId>
+			<artifactId>delete-by-query</artifactId>
+			<version>${es.version}</version>		
 		<!-- xml parser -->
 	    <dependency>
 			<groupId>com.databricks</groupId>
