Updated the pom file

--- a/Spark-2.1/pom.xml
+++ b/Spark-2.1/pom.xml
@@ -135,6 +135,7 @@
 			<artifactId>delete-by-query</artifactId>
 			<version>${es.version}</version>		
 		<!-- xml parser -->
+		</dependency>
 	    <dependency>
 			<groupId>com.databricks</groupId>
 			<artifactId>spark-xml_2.11</artifactId>
