--- a/Spark-2.1/pom.xml
+++ b/Spark-2.1/pom.xml
@@ -125,6 +125,8 @@
 			<artifactId>elasticsearch-spark-20_2.11</artifactId>
 			<version>5.6.2</version>
 		</dependency>
+   <!-- <dependency> <groupId>org.elasticsearch</groupId> <artifactId>elasticsearch-spark_2.11</artifactId> 
+			<version>2.2.0</version> </dependency> -->
 		<dependency>
 			<groupId>org.elasticsearch</groupId>
 			<artifactId>elasticsearch</artifactId>
